chore(helm):[TRI-368] Improve configurability
Use separate RestTemplates for each service, introduce configurable endpoints instead of base url.
Switch to Durations in config.